# gainzville-rust

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  PLAN_client_refactor.md  README.md  discussion_delta_updates.md  docker-compose.yml  repo_refactor.md  todo.md
client/: Cargo.toml  apply.rs  client.rs  lib.rs  query_cache.rs  query_store.rs  sqlite-schema.sql  sqlite_delta_executor.rs  sqlite_executor.rs
client/migrations/: 20250109000000_initial_schema.sql
client/tests/: tests.rs
core/: Cargo.toml
core/.sqlx/: query-442d5dbf767f93993ab01b22c50d74742882ef722897ae743383fc0d53fbf9be.json
core/migrations/: 20251123042841_add_tables.sql
core/src/: actions.rs  constants.rs  delta.rs  delta_executor.rs  error.rs  forest.rs  instantiation.rs  io.rs  lib.rs  mutators.rs  proptest.rs  queries.rs  query_executor.rs  reader.rs  repos.rs  sandbox.rs  std_lib.rs  validation.rs
core/src/core/: actions.rs  delta.rs  proptest.rs  repos.rs  validation.rs
core/src/generation/: actions.rs  mod.rs
core/src/models/: activity.rs  actor.rs  attribute.rs  attribute_pair.rs  entry.rs  entry_join.rs  entry_view.rs  mod.rs  user.rs
core/src/postgres/: apply.rs  repos.rs
core/src/sqlite/: apply.rs
core/tests/: postgres.rs
desktop/: Cargo.toml
desktop/assets/: dx-components-theme.css  tailwind.css
desktop/assets/styling/: attribute.css  entry.css  library.css  main.css  tokens.css
desktop/docs/: command_palette.md
desktop/src/: main.rs
desktop/src/components/: attribute_view.rs  command_palette.rs  entry_node.rs  entry_view.rs  frequency_heatmap.rs  log_date_picker.rs  mod.rs  temporal_attribute.rs
desktop/src/components/popover/: style.css
desktop/src/hooks/: app_store.rs  mod.rs  use_stream.rs
desktop/src/views/: dev.rs  library.rs  log.rs  mod.rs  navbar.rs  viz.rs
docker/: init-db.sql
docs/: actions_and_queries.md  attribute-configuration-plan.md  attributes-design.md  authentication.md  boundary-transformations.md  features.md  forest-ui-model.md  generation-architecture.md  generation.md  hegel-pbt-integration-research.md  model.md  permissions.md  properties.md  query-architecture-change.md  reader.md  roadmap.md  sets-design.md  sync.md  turso-simulation-reference.md
docs/ios-architecture/: codebase-assessment.md  gv-ios-architecture.md
docs/plans/: boundary-transformations-assessment.md  boundary-transformations-gap-analysis.md
docs/supporting/: tigerbeetle-simulation-reference.md
docs/swift-architecture/: codebase-assessment.md  design.md  ghostty-zig-swift-architecture-research.md  gv-ios-architecture.md  gv-rust-swift-architecture-research.md  uniffi-poc.md
docs/ui/: adaptive-rendering-decisions.md  architecture.md  design.md
dx-app/: AGENTS.md  Cargo.toml  Dioxus.toml  tailwind.css
dx-app/assets/: tailwind.css
dx-app/src/: main.rs
generation/: Cargo.toml  actions.rs  activity.rs  attribute.rs  entry.rs  glossary.md  io.rs  lib.rs  model.rs  samples.rs
gv-ffi/: Cargo.toml  README.md
gv-ffi/bindings/: gv_ffi.swift  gv_ffiFFI.h
gv-ffi/docs/: query-cache-plan.md  swift-setup.md
gv-ffi/src/: core.rs  lib.rs  types.rs
gv-sql/: Cargo.toml  columns.rs  error.rs  lib.rs  rows.rs
gv-sql/postgres/: delta_executor.rs  query_executor.rs
gv-sql/sqlite/: delta_executor.rs  mod.rs  query_executor.rs
gv-sql/tests/: columns_sqlite.rs  entry_round_trip_sqlite.rs  rows_round_trip.rs
gv_postgres/: apply.rs  controller.rs  repos.rs
gv_postgres/tests/: postgres.rs
gv_sql/: Cargo.toml  columns.rs  lib.rs  rows.rs
gv_sql/postgres/: delta_executor.rs  mod.rs  query_executor.rs
gv_sql/postgres/migrations/: 20260523000000_add_description_to_attributes.sql
gv_sql/sqlite/: delta_executor.rs  query_executor.rs
gv_sql/sqlite/migrations/: 20260307000000_add_is_complete_to_entries.sql
gv_sql/tests/: columns_sqlite.rs  rows_round_trip.rs
gv_sqlite/: Cargo.toml  apply.rs  controller.rs  repos.rs
integration-tests/: Cargo.toml
integration-tests/tests/: generation_tests.rs  postgres_tests.rs  property_tests.rs  sqlite_tests.rs
integration_tests/: Cargo.toml
integration_tests/tests/: postgres_tests.rs  sqlite_tests.rs
ivm/: Cargo.toml
ivm/src/: types.rs
mobile/: Cargo.toml
mobile/assets/: tailwind.css
mobile/docs/: command_palette.md
mobile/src/: main.rs
postgres/: Cargo.toml  apply.rs  controller.rs  lib.rs  postgres_execute.rs  postgres_executor.rs  reader.rs  repos.rs  sandbox.rs  server.rs
postgres/.sqlx/: query-259f4ef784e5c9a4be992bc98003bdcc6fe4055544dc2410f250435d17931aa2.json  query-64cc87f021a21838a6e731e71627e2718831bac2c7695872fcd2e7eba4b96b26.json  query-ba53d5c866788816086de039ea07c785b253daa393976ca24cd68e98496657eb.json  query-d22f8f83a5252d34343fa717fd3bb35a1adf7a9bfcf1973d9752608b88ff124b.json
postgres/migrations/: 20251123042841_add_tables.sql  20260307000000_add_is_complete_to_entries.sql
postgres/postgres/: query-469dc70461aae1428aa36219533d7344db89e473c3c7a840de5c2849bf43ea18.json  query-b8bc93f4d927653b9363c09fb58b90d30d85ecebeb63d934bc018d71c05b4b1b.json
postgres/tests/: macros.rs  postgres.rs  sandbox_test.rs
postgres/tests/postgres/: common.rs
scripts/: rebuild-xcframework.sh  regen-bindings.sh
server/: Cargo.toml  apply.rs  lib.rs  postgres_delta_executor.rs  postgres_executor.rs  server.rs
server/.sqlx/: query-33f745a2955b6212c7cbd8b76c540ff243ccf5d6b7cdd61b186bdb20751414d5.json  query-3d9dee30086ba8cd4a6e02cb060cb6e1cc14c252f1503007e9038c631f65504d.json  query-5dcf89cd1108a78673147679bd44db1dd1b16795cc28eb853bb8097c2514ec2e.json  query-6f27968dae51ded7e0905024b3c4fe444061c521c981bccc95fce5a99569eb1f.json  (+2 more)
sqlite/: Cargo.toml  apply.rs  client.rs  controller.rs  lib.rs  reader.rs  repos.rs  sandbox.rs  sqlite-schema.sql  sqlite_execute.rs
sqlite/.sqlx/: query-b26ebf1146c888db46ce7e5025d85307f75da5a9adb971c4add40e6042a5fe03.json
sqlite/migrations/: 20250109000000_initial_schema.sql  20260211000000_add_attributes.sql
sqlite/tests/: tests.rs
src/: aspirations.md  lib.rs
src/core/: mod.rs  (+6 more)
swift-app/: .gitignore  DEVELOPMENT.md  SWIFT-APP.md
tests/: postgres.rs
(+142 files in other folders)
