[workspace]
resolver = "2"

members = [
    "core",
    "generation",
    "postgres",
    "sqlite",
    "integration_tests",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full", "rt-multi-thread"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IDs and time
uuid = { version = "1.18", features = ["v4", "serde", "arbitrary"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

# Testing and utilities
rand = "0.9.2"
proptest = "1.0.0"
test-strategy = "0.4.3"
fractional_index = "2.0.2"
itertools = "0.14.0"

# Other
dotenvy = "0.15.7"
anarchist-readable-name-generator-lib = "0.2.1"
lipsum = "0.9.1"
