[workspace]
members = [
    "core",
    "generation",
    "integration_tests",
    "mobile",
    "postgres",
    "sqlite",
    "mobile", "ivm",
]
resolver = "2"

[workspace.dependencies]
anarchist-readable-name-generator-lib = "0.2.1"
anyhow = "1.0"
dotenvy = "0.15.7"
fractional_index = "2.0.2"
itertools = "0.14.0"
lipsum = "0.9.1"
proptest = "1.0.0"
rand = "0.9.2"
serde_json = "1.0"
test-strategy = "0.4.3"
thiserror = "2.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
rand_chacha = "0.9.0"

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.sqlx]
version = "0.8"
features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
    "sqlite",
]

[workspace.dependencies.tokio]
version = "1.48"
features = [
    "full",
    "rt-multi-thread",
]

[workspace.dependencies.uuid]
version = "1.18"
features = [
    "v4",
    "serde",
    "arbitrary",
]
