[package]
name = "gv_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
proptest = { workspace = true }
test-strategy = { workspace = true }
fractional_index = { workspace = true }
dotenvy = { workspace = true }
anarchist-readable-name-generator-lib = { workspace = true }
lipsum = { workspace = true }

[dev-dependencies]
