[package]
name = "desktop"
version = "0.1.0"
authors = ["Brian Luther <briansluther@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gv_sqlite = { path = "../sqlite" }
gv_core = { path = "../core" }
generation = { path = "../generation" }

dioxus = { version = "0.7.1", features = ["router"] }
directories = "6.0.0"
uuid = { workspace = true }
rand = { workspace = true }
futures-util = "0.3.31"
tokio = { version = "1", features = ["time"] } 
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
dioxus-free-icons = { version = "0.10.0", features = ["font-awesome-brands", "ionicons"] }

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
