[package]
name = "generation"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
gv_core = { path = "../core" }

rand = { workspace = true }
uuid = { workspace = true }
fractional_index = { workspace = true }
anarchist-readable-name-generator-lib = { workspace = true }
chrono = { workspace = true }
rustc-hash = { workspace = true }
anyhow = { workspace = true }
rand_distr = "0.5.1"
rand_chacha = "0.9.0"
