[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"

# [lib] section not needed - defaults to src/lib.rs


[dependencies]
gv-core = { path = "../core" }
gv-server = { path = "../server" }
gv-client = { path = "../client" }
gv-sql = { path = "../gv-sql" }
generation = { path = "../generation" }
sqlx = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }
fractional_index = { workspace = true }
rand_chacha.workspace = true
