[package]
name = "integration_tests"
version = "0.1.0"
edition = "2024"

# [lib] section not needed - defaults to src/lib.rs


[dependencies]
gv_core = { path = "../core" }
gv_postgres = { path = "../postgres" }
gv_sqlite = { path = "../sqlite" }
generation = { path = "../generation" }
sqlx = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }
fractional_index = { workspace = true }
rand_chacha.workspace = true
