[package]
name = "ivm"
version = "0.1.0"
edition = "2024"

[dependencies]
gv_core = { path = "../core" }
generation = { path = "../generation" }

anyhow.workspace = true
rand_chacha.workspace = true
serde.workspace = true
uuid.workspace = true

clap = "4.5.54"
csv = "1.4.0"
dbsp = "0.227.0"
chrono = { workspace = true, features = ["rkyv-64", "serde"] }
feldera-macros = "0.227.0"
rkyv = { version = "0.7.46", default-features = false, features = ["std", "size_64", "validation", "uuid"] }
size-of = { version = "0.1.7", features = [
    "time-std",
    "ordered-float",
], package = "feldera-size-of" }