[package]
name = "gv_postgres"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[[bin]]
name = "pg_sandbox"
path = "bin/pg_sandbox.rs"

[[test]]
name = "sandbox_test"
path = "tests/sandbox_test.rs"

[dependencies]
# Core dependency
gv_core = { path = "../core" }

# Workspace deps
sqlx = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }

# Binary dependencies
tokio = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { workspace = true }
fractional_index = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
test-strategy = { workspace = true }
