[package]
name = "gv_sqlite"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[[bin]]
name = "sqlite_sandbox"
path = "bin/sqlite_sandbox.rs"

[dependencies]
# Core dependency
gv_core = { path = "../core" }
futures-core = "0.3"
async-stream = "0.3"

# Workspace deps
sqlx = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }

# Binary dependencies
tokio = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
